--- a/src/index.css
+++ b/src/index.css
@@ -394,6 +394,7 @@ ul.social-share li a {
 }
 .fix {
   overflow: hidden;
+  z-index: 100;
 }
 .wrapper {
   position: relative;
@@ -423,6 +424,14 @@ p:last-child {
 .row {
   -webkit-justify-content: center;
   justify-content: center;
+}
+.row-start {
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+}
+.row-end {
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
 }
 .row--35 {
   margin-left: -35px;
@@ -810,14 +819,39 @@ textarea:-ms-input-placeholder {
 .header-area.header--fixed.sticky .humberger-menu span.text-white {
   color: #1f1f25 !important;
 }
+.fill-navbar {
+  box-shadow: 2px 2px 10px rgba(120, 120, 120, 0.1) !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  backdrop-filter: blur(12px) saturate(180%) contrast(90%) brightness(30%) !important;
+  -webkit-backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%) !important;
+}
 .header-right {
   display: -webkit-flex;
   display: flex;
   -webkit-align-items: center;
   align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
+.header-center {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: .5rem 0rem 1rem 0rem;
+}
+
+.header-center img {
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header-area .header-wrapper .mainmenunav {
     position: absolute;
@@ -1234,7 +1268,7 @@ textarea:-ms-input-placeholder {
   height: 27px;
 }
 .section-title {
-  margin-top: -20px;
+  margin-top: 3rem;
 }
 .section-title h2.title {
   font-size: 60px;
@@ -1450,6 +1484,7 @@ ul.social-share.social-style--2.color-black li a:hover {
     min-height: 274px;
   }
 }
+
 .portfolio .thumbnail-inner {
   transition: -webkit-transform 0.28s ease;
   transition: transform 0.28s ease;
@@ -1478,6 +1513,13 @@ ul.social-share.social-style--2.color-black li a:hover {
   z-index: 5;
   opacity: 0;
 }
+.portfolio-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 11vw;
+}
 .portfolio .thumbnail {
   position: absolute;
   top: 0;
@@ -1499,27 +1541,35 @@ ul.social-share.social-style--2.color-black li a:hover {
 }
 .portfolio .thumbnail.image-1 {
   background-image: url(./assets/images/portfolio/portfolio-1.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail.image-2 {
   background-image: url(./assets/images/portfolio/portfolio-2.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail.image-3 {
   background-image: url(./assets/images/portfolio/portfolio-3.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail.image-4 {
   background-image: url(./assets/images/portfolio/portfolio-4.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail.image-5 {
   background-image: url(./assets/images/portfolio/portfolio-5.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail.image-6 {
   background-image: url(./assets/images/portfolio/portfolio-6.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail.image-7 {
   background-image: url(./assets/images/portfolio/portfolio-7.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail.image-10 {
   background-image: url(./assets/images/portfolio/portfolio-10.jpg);
+  opacity: 0.3;
 }
 .portfolio .thumbnail:after {
   background-color: rgba(45, 45, 45, 0.35);
@@ -1595,7 +1645,8 @@ ul.social-share.social-style--2.color-black li a:hover {
 }
 .portfolio .content .inner p {
   color: #c6c9d8;
-  font-size: 14px;
+  font-size: 12px;
+  text-shadow: 1px 1px 3px rgb(96 96 96 / 80);
 }
 .portfolio .content .inner h4 {
   font-size: 24px;
@@ -1909,6 +1960,7 @@ ul.social-share.social-style--2.color-black li a:hover {
 }
 .personal-portfolio-slider {
   position: relative;
+  z-index: 50;
 }
 @media only screen and (max-width: 767px) {
   .personal-portfolio-slider:before {
@@ -2044,7 +2096,7 @@ ul.social-share.social-style--2.color-black li a:hover {
   }
 }
 .slider-paralax {
-  height: 950px;
+  height: 100vh;
 }
 @media only screen and (max-width: 767px) {
   .slider-paralax {
@@ -2094,7 +2146,7 @@ ul.social-share.social-style--2.color-black li a:hover {
 }
 .thumbnail img {
   border-radius: 5px;
-  box-shadow: 0 25px 65px rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(10px 10px 30px rgba(208, 208, 208, 0.075));
 }
 ul.brand-style-2 {
   list-style: none;
@@ -2286,13 +2338,17 @@ ul.tab-style--1 li:before {
   color: #008bff;
 }
 .about-wrapper .thumbnail {
-  position: relative;
+  position: fixed;
   z-index: 2;
   text-align: center;
+  width: auto;
+  height: auto;
+  left: -30rem;
+  top: 20rem;
 }
 .about-wrapper .thumbnail img {
-  border-radius: 50%;
-  width: 170px !important;
+  border-radius: 0%;
+  max-width: 100vw !important;
 }
 .active-dark {
   background: #101010;
@@ -2364,7 +2420,7 @@ ul.tab-style--1 li:before {
   border-color: #008bff;
 }
 .active-dark .header-area.header--fixed.sticky {
-  background: #191919;
+  background: transparent;
 }
 .active-dark .header-area.header--fixed.sticky .header-wrapper a.rn-btn {
   color: #fff;
@@ -2376,10 +2432,33 @@ ul.tab-style--1 li:before {
 }
 .active-dark .bg_image--25 {
   background-color: #101010;
-  background-image: url(./assets/images/bg/portrait.jpg) !important;
-  background-position: 50%;
+  background-image: url(./assets/images/bg/background.jpeg) !important;
+  /* background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  
+  /* Set a specific height */
+  min-height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.particles {
+  width: 70vw;
+  height: 90%;
+  clip-path: polygon(0 0, 100% 1%, 75% 100%, 25% 100%);
+  position: absolute;
+  top: -25vh;
+  left: 14vw;
+  transition: opacity 1s !important;
+}
+.lucas-photo {
+  position: absolute;
+  left: 75vw;
+  z-index: 0;
 }
 .active-dark .backto-top > div {
   background-color: #000;
@@ -2472,11 +2551,6 @@ ul.tab-style--1 {
   margin: 0 -20px;
   flex-wrap: wrap;
 }
-@media {
-  ul.tab-style--1 {
-    margin: 0 -10px;
-  }
-}
 ul.tab-style--1 li {
   position: relative;
   margin: 0 20px;
@@ -2486,17 +2560,6 @@ ul.tab-style--1 li {
   font-weight: 500;
   cursor: pointer;
   outline: none;
-}
-@media {
-  ul.tab-style--1 li {
-    margin: 0 10px;
-    font-size: 17px;
-  }
-}
-@media {
-  ul.tab-style--1 li {
-    margin-bottom: 10px;
-  }
 }
 ul.tab-style--1 li::before {
   position: absolute;
