Added new buy me a coffee button, and fixed the animation on avatar.

--- a/src/index.css
+++ b/src/index.css
@@ -1579,7 +1579,7 @@ ul.social-share.social-style--2.color-black li a:hover {
   opacity: 0.3;
 }
 .portfolio .thumbnail.image-4 {
-  background-image: url(./assets/images/portfolio/portfolio-4.jpg);
+  background-image: url(./assets/images/portfolio/portfolio-4.jpeg);
   opacity: 0.3;
 }
 .portfolio .thumbnail.image-5 {
